# XRefkit.MCP

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: client-runtime-contract-improvement-plan.md  xid-document-cache.md
src/xrefkit_mcp/: __init__.py  catalog.py  cli.py  client_cache.py  context_registry.py  contracts.py  repository.py  schemas.py  server.py  startup_contract_pack.py
tests/: test_catalog.py  test_client_cache.py  test_context_registry.py  test_mcp_client_integration.py  test_server_http.py
work/runtime-output/: get_startup_context.runtime-text.xid-only.md  get_startup_context.runtime.json
